app/assets/stylesheets/games.scss
#please-wait-jumbo {
	display: flex;
	width: 100%;
	width: 100vw;
	margin: 0;
	align-items: center;
	justify-content: center;
	text-align: center;
}

#setup-words {
	position: relative;

	.title {
		position: absolute;
		top: -10px;
		border-radius: 6px;
		background-color: #ccc;
		padding: 0 6px;
	}
	input[type=hidden] {
		display: none;
	}
}

#setup-whos {
	position: relative;
	height: 20px;

	.title {
		position: absolute;
		top: -10px;
		border-radius: 6px;
		background-color: #ccc;
		padding: 0 6px;
	}
}

.game-grid {
	border: 1px dotted #eee;
	display: flex;
	align-items: center;
	justify-content: center;
	text-align: center;
	margin: 0;
	padding: 0;

	.col {
		flex: 1;
		margin: 0;
		padding: 0;

		.cell {
			position: relative;
			border: 1px dotted #eee;
			min-height: 13%;
			min-height: 13vh;
			text-transform: uppercase;
			display: flex;
			align-items: center;
			justify-content: center;
			text-align: center;
			margin: 0;
			padding: 0;
			font-size: 120%;

			.color-setters {
				position: absolute;
				top: 0;
				width: 100%;
				height: 100%;
				z-index: 10;

				.setter {
					position: absolute;
					top: 30%;
					width: 20%;
					height: 40%;
					border: 1px solid gray;
					border-radius: 10%;
					cursor: pointer;

					&.red {
						left: 4%;
					}
					&.blue {
						left: 28%;
					}
					&.bystander {
						left: 52%;
					}
					&.assassin {
						left: 76%;
					}
				}
			}
		}
	}
	.nil {
		background-color: white;
		color: black;
	}
	.red {
		background-color: red;
		color: white;
	}
	.blue {
		background-color: blue;
		color: white;
	}
	.bystander {
		background-color: #D0D0C1;
		color: black;
	}
	.assassin {
		background-color: black;
		color: white;
	}
}

